Poniendo bonito código + epoches parametrizados + agregator reset

--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -2,22 +2,86 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "de3333e5",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "test_convergence() takes 1 positional argument but 2 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 61>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     57\u001b[0m         node\u001b[38;5;241m.\u001b[39mstop()\n\u001b[1;32m     58\u001b[0m         time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m.1\u001b[39m) \u001b[38;5;66;03m#Esperar por la asincronía\u001b[39;00m\n\u001b[0;32m---> 61\u001b[0m \u001b[43mtest_convergence\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: test_convergence() takes 1 positional argument but 2 were given"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:Nodo a la escucha en localhost 60801\n",
+      "INFO:root:Nodo a la escucha en localhost 60802\n",
+      "INFO:root:Conexión aceptada con ('localhost', 60802)\n",
+      "INFO:root:Broadcasting start learning...\n",
+      "INFO:root:Training...\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "GPU available: False, used: False\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "IPU available: False, using: 0 IPUs\n",
+      "HPU available: False, using: 0 HPUs\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epochs: -1\n",
+      "Train: 54000 Val:6000 Test:10000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  | Name     | Type     | Params\n",
+      "--------------------------------------\n",
+      "0 | accuracy | Accuracy | 0     \n",
+      "1 | l1       | Linear   | 100 K \n",
+      "2 | l2       | Linear   | 33.0 K\n",
+      "3 | l3       | Linear   | 2.6 K \n",
+      "--------------------------------------\n",
+      "136 K     Trainable params\n",
+      "0         Non-trainable params\n",
+      "136 K     Total params\n",
+      "0.544     Total estimated model params size (MB)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Sanity Checking: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a9557ba7183f4db098e48e0216d40994",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -49,7 +113,7 @@
     "        assert len(node.neightboors) == n-1\n",
     "\n",
     "    # Start Learning\n",
-    "    nodes[0].set_start_learning(rounds=r)\n",
+    "    nodes[0].set_start_learning(rounds=r,epochs=-1)\n",
     "\n",
     "    # Wait 4 results\n",
     "    while True:\n",
@@ -81,7 +145,7 @@
     "        time.sleep(.1) #Esperar por la asincronía\n",
     "\n",
     "        \n",
-    "test_convergence((1,1))"
+    "test_convergence((2,2))"
    ]
   },
   {
@@ -137,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6a49fc5c",
+   "id": "8d7ffdf5",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3df6b4f",
+   "id": "f35e9842",
    "metadata": {},
    "outputs": [],
    "source": []
